# -jetty-production

./: .gitignore  README.md  package-lock.json  package.json
ai-service/: main.py  pyproject.toml  requirements.txt
ai-service/models/: forecaster.py
ai-service/routes/: analyse.py  health.py  predict.py  train.py
ai-service/saved_models/: xgb_wu-a1.joblib  xgb_wu-a1_meta.joblib  xgb_wu-a2.joblib  xgb_wu-a2_meta.joblib  xgb_wu-a3.joblib  xgb_wu-a3_meta.joblib  xgb_wu-b1.joblib  xgb_wu-b1_meta.joblib  xgb_wu-b2.joblib  xgb_wu-b2_meta.joblib  xgb_wu-b3.joblib  xgb_wu-b3_meta.joblib  xgb_wu-c1.joblib  xgb_wu-c1_meta.joblib  xgb_wu-c2.joblib  xgb_wu-c2_meta.joblib  xgb_wu-c3.joblib  xgb_wu-c3_meta.joblib  xgb_wu-d1.joblib  xgb_wu-d1_meta.joblib
backend/: create-admin.mjs  package-lock.json  package.json  seed-manager.mjs
backend/src/: app.js  server.js
backend/src/config/: db.js  oracle.js
backend/src/middlewares/: audit.js  auth.js  errorHandler.js
backend/src/models/: Alert.js  AuditLog.js  DailyObjective.js  Forecast.js  ProductionDaily.js  Settings.js  users.js
backend/src/routes/: ai.js  audit.js  auth.js  dashboard.js  debug.js  employeePerformance.js  exportRoutes.js  forecast.js  kpis.js  production.js  seed-api.js  seed.js  settings.js  sync.js  users.js  workUnits.js
backend/src/services/: oracleSync.js
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/auth/: AuthProvider.jsx
scripts/: import-excel.js
server/: index.ts
(+36 files in other folders)
