[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.129.0",
    "httpx>=0.28.1",
    "joblib>=1.5.3",
    "pandas>=3.0.0",
    "pydantic>=2.12.5",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.40.0",
    "xgboost>=3.2.0",
    "xlrd>=2.0.2",
]
